feat(releases-card): rename 'Boards validated' to 'Boards Build' and update instructions
- Renamed label from 'Boards validated' to 'Boards Build'
- Replaced single instruction paragraph with two lines:
  - First time setup: USB flash with optional WiFi credentials
  - Updates Only: Download OTA Files option

--- a/distributor/index.html
+++ b/distributor/index.html
@@ -47,8 +47,10 @@
                 <span class="card-header-icon"></span>
             </div>
             <p class="hero-copy">
-                Connect your board via USB, select the correct board below and then flash.
-                Wifi setup will need to be completed following every flash.
+                <strong>First time setup</strong> - Connect via USB, select the correct board below, optionally provide WiFi credentials, and then flash. WiFi setup via AP mode (SSID centaurifilament.local) will need to be completed if credentials not applied.
+            </p>
+            <p class="hero-copy">
+                <strong>Updates Only</strong> - Use the 'Download OTA Files' option instead to get the required files. Same WiFi considerations as option 1.
             </p>
             <div class="hero-grid">
                 <div>
@@ -63,7 +65,7 @@
                     <p class="metric-value" id="activeFirmwareDate">—</p>
                 </div>
                 <div>
-                    <p class="metric-label">Boards validated</p>
+                    <p class="metric-label">Boards Build</p>
                     <p class="metric-value" id="boardCount">—</p>
                 </div>
             </div>
