--- a/distributor/index.html
+++ b/distributor/index.html
@@ -71,6 +71,17 @@
                     <p class="metric-label">Boards Built</p>
                     <p class="metric-value" id="boardCount">—</p>
                 </div>
+                <div class="release-link-block">
+                    <a class="release-notes-link disabled" id="releaseNotesLink" href="#" target="_blank"
+                        rel="noopener" aria-disabled="true">
+                        View Release Notes
+                        <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                            stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
+                            <polyline points="7 7 17 7 17 17"></polyline>
+                            <line x1="7" y1="17" x2="17" y2="7"></line>
+                        </svg>
+                    </a>
+                </div>
             </div>
         </section>
 
