--- a/distributor/index.html
+++ b/distributor/index.html
@@ -26,7 +26,7 @@
                     <h1>OC-Filament Board Creation</h1>
                     <p class="powered-by">
                         <span class="status-dot"></span>
-                        Check Github for source and self-hosting options.
+                        OpenCentauri v0.3.0 or later
                     </p>
                 </div>
             </div>
