--- a/distributor/index.html
+++ b/distributor/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Centauri Firmware Distributor</title>
+    <title>OpenFilamentSensor Firmware Distributor</title>
     <link rel="icon" type="image/x-icon" href="./favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -337,9 +337,9 @@
 
     <footer>
         <div class="container footer-content">
-            <p>Open Centauri Filament Distributor · v1</p>
+            <p>OpenFilamentSensor Distributor · v1</p>
             <p>
-                Visit <a href="https://github.com/harpua555/centauri-carbon-motion-detector">Github</a> for source code.
+                Visit <a href="https://github.com/harpua555/OpenFilamentSensor">Github</a> for source code.
             </p>
         </div>
     </footer>
