--- a/webui_lite/index.html
+++ b/webui_lite/index.html
@@ -1239,7 +1239,7 @@
         <div id="update" class="page">
             <div class="info-banner">
                 <span>Looking to install the latest version? Use the web flasher to get the newest firmware.</span>
-                <a href="https://esptool.harpua555.dev" target="_blank" rel="noopener noreferrer" class="btn btn-secondary">Open Web Flasher</a>
+                <a href="https://ofs.harpua555.dev" target="_blank" rel="noopener noreferrer" class="btn btn-secondary">Open Web Flasher</a>
             </div>
             <div class="card">
                 <div class="card-header">
